[package]
name = "plonky2_ecdsa"
description = "ECDSA gadget for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
parallel = ["plonky2_maybe_rayon/parallel", "plonky2/parallel"]

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.10.0", default-features = false }
plonky2_maybe_rayon = { git = "https://github.com/mir-protocol/plonky2", rev = "39d2237dee8b8d7c9049857f8ef54799d6c2cdda", default-features = false }
num = { version = "0.4.0", default-features = false }
plonky2 = { git = "https://github.com/mir-protocol/plonky2", rev = "39d2237dee8b8d7c9049857f8ef54799d6c2cdda", default-features = false }
plonky2_u32 = { git = "https://github.com/cf/plonky2-u32", rev = "465d93bbc82a60fd987232b2d21ea6a74ec2fd96", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }
